feat: basic UI review and rating